force-app/main/default/objects/User_Address__c/fields/UserAccount__c.field-meta.xml
<CustomField>
    <fullName>UserAccount__c</fullName>
    <description>It keeps the person name that corresponds to the person address</description>
    <inlineHelpText>Select the person to associate with this address</inlineHelpText>
    <label>UserAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>User Address</relationshipLabel>
    <relationshipName>User_Address</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>