force-app/main/default/objects/User_Address__c/fields/Verbal_Consent__c.field-meta.xml
<CustomField>
    <fullName>Verbal_Consent__c</fullName>
    <formula>Text(UserAccount__r.Verbal_Consent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verbal Consent</label>
    <type>Text</type>
</CustomField>