force-app/main/default/objects/User_Address__c/fields/Verbal_Consent_Flag__c.field-meta.xml
<CustomField>
    <fullName>Verbal_Consent_Flag__c</fullName>
    <formula>UserAccount__r.Verbal_Consent_Flag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verbal Consent Flag</label>
    <type>Checkbox</type>
</CustomField>