force-app/main/default/objects/User_Address__c/fields/X1st_IB_Agent__c.field-meta.xml
<CustomField>
    <fullName>X1st_IB_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It will holds the value of Agent Name</description>
    <label>1st IB Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Address2</relationshipName>
    <type>Lookup</type>
</CustomField>