force-app/main/default/objects/User_Address__c/fields/X1st_IB_Agent_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_IB_Agent_Date__c</fullName>
    <description>It will holds the value of created date and time</description>
    <label>1st IB Agent Date</label>
    <type>DateTime</type>
</CustomField>