force-app/main/default/objects/User_Address__c/fields/X1st_Owner__c.field-meta.xml
<CustomField>
    <fullName>X1st_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1st Owner</label>
    <type>Checkbox</type>
</CustomField>